# Local-multilingual-real-time-speech-recognition-and-real-time-subtitle-translation

./: README.md
asr/rknn_whisper/cpp/: CMakeLists.txt  main.cc  mock_streaming_feeder.cc  mock_streaming_feeder.h  process.cc  process.h  result_queue.cc  result_queue.h  streaming_manager.cc  streaming_manager.h  thread_safe_buffer.cc  thread_safe_buffer.h  whisper.cc  whisper.h  whisper_jni_wrapper.cc
asr/rknn_whisper/java/: MainActivity.java  WhisperJNI.java  WhisperRecognizer.java
asr/rknn_whisper/python/: README.md  convert_quantize.py  dataset2txt.py  whisper.py
translate/rknn_helsinki/cpp/: CMakeLists.txt  helsinki.cc  helsinki.h  helsinki_api.cc  helsinki_api.h  helsinki_jni.cc  main_sp.cc  main_test.cc  sp_tokenizer.cc  sp_tokenizer.h
translate/rknn_helsinki/java/: HelsinkiJNI.java
translate/rknn_helsinki/python/: requirements.txt  step1_decoder_export.py  step1_encoder_export.py  step2_helsinki.py  step3_convert_to_rknn.py  test.py
